--- a/src/main/resources/templates/catalogos/productos.html
+++ b/src/main/resources/templates/catalogos/productos.html
@@ -138,7 +138,7 @@
 							<div class="invalid-feedback">Proporciona una descripci&oacute;n v&aacute;lida.</div>
 						</div>
 						<div class="mb-3">
-							<label for="plataforma" class="form-label tncb s1">Descripci&oacute;n</label> 
+							<label for="plataforma" class="form-label tncb s1">Plataforma</label> 
 							<select id="plataforma" name="plataforma" class="form-select form-select-lg mb-3" required >
 								<option selected disabled value="">...</option>
 								<option th:each="p, itr: ${listPlatform}" th:value="${p.clave}" th:text="${p.descripcion}"></option>
@@ -206,7 +206,7 @@
 							<div class="invalid-feedback">Proporciona una descripci&oacute;n v&aacute;lida.</div>
 						</div>
 						<div class="mb-3">
-							<label for="plataforma" class="form-label tncb s1">Descripci&oacute;n</label> 
+							<label for="plataforma" class="form-label tncb s1">Plataforma</label> 
 							<select id="plataforma" name="plataforma" class="form-select form-select-lg mb-3" required >
 								<option selected disabled value="">...</option>
 								<option th:each="p, itr: ${listPlatform}" th:value="${p.clave}" th:text="${p.descripcion}"></option>
