--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -123,6 +123,7 @@
 			<script src="./resources/js/libs/perfect-scrollbar.min.js"></script>
 			<script src="./resources/js/libs/smooth-scrollbar.min.js"></script>
 			<script src="./resources/js/libs/moment-with-locales.min.js"></script>
+			<script src="./resources/js/bootstrap-5.1.3/bootstrap-datepicker.js"></script>
 			<script src="./resources/js/bootstrap-5.1.3/bootstrap-datetimepicker.min.js"></script>
 			<script src="./resources/js/bootstrap-5.1.3/bootstrap.bundle.min.js"></script>
 			<script src="./resources/js/index.js"></script>
